--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <style>
     .text-shadow {
-      text-shadow: 1px 2px 3px rgba(152, 133, 247, 0.5);
+      text-shadow: 1px 2px 3px rgba(223, 221, 233, 0.5);
     }
   </style>
 
@@ -26,108 +26,15 @@
               <img class="h-12 w-auto" src="logo-df.png" alt="" />
             </a>
           </div>
-          <div class="flex lg:hidden">
-            <button
-              type="button"
-              class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-400"
-            >
-              <span class="sr-only">Open main menu</span>
-              <svg
-                class="h-6 w-6"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                aria-hidden="true"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
-                />
-              </svg>
-            </button>
-          </div>
+          <div class="flex lg:hidden"></div>
           <div class="hidden lg:flex lg:gap-x-12"></div>
           <div class="hidden lg:flex lg:flex-1 lg:justify-end"></div>
         </nav>
-        <!-- Mobile menu, show/hide based on menu open state. -->
-        <div class="lg:hidden" role="dialog" aria-modal="true">
-          <!-- Background backdrop, show/hide based on slide-over state. -->
-          <div class="fixed inset-0 z-50"></div>
-          <div
-            class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-gray-900 px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-white/10"
-          >
-            <div class="flex items-center justify-between">
-              <a href="#" class="-m-1.5 p-1.5">
-                <span class="sr-only">Your Company</span>
-                <img
-                  class="h-8 w-auto"
-                  src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500"
-                  alt=""
-                />
-              </a>
-              <button
-                type="button"
-                class="-m-2.5 rounded-md p-2.5 text-gray-400"
-              >
-                <span class="sr-only">Close menu</span>
-                <svg
-                  class="h-6 w-6"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  aria-hidden="true"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M6 18L18 6M6 6l12 12"
-                  />
-                </svg>
-              </button>
-            </div>
-            <div class="mt-6 flow-root">
-              <div class="-my-6 divide-y divide-gray-500/25">
-                <div class="space-y-2 py-6">
-                  <a
-                    href="#"
-                    class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-white hover:bg-gray-800"
-                    >Product</a
-                  >
-                  <a
-                    href="#"
-                    class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-white hover:bg-gray-800"
-                    >Features</a
-                  >
-                  <a
-                    href="#"
-                    class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-white hover:bg-gray-800"
-                    >Marketplace</a
-                  >
-                  <a
-                    href="#"
-                    class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-white hover:bg-gray-800"
-                    >Company</a
-                  >
-                </div>
-                <div class="py-6">
-                  <a
-                    href="#"
-                    class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-white hover:bg-gray-800"
-                    >Log in</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </header>
 
-      <div class="relative isolate overflow-hidden pt-14">
+      <div class="relative isolate overflow-hidden">
         <img
-          src="3.jpg"
+          src="7.png"
           alt=""
           class="absolute inset-0 -z-10 h-full w-full object-cover"
         />
@@ -159,28 +66,31 @@
             "
           ></div>
         </div>
-        <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
+        <div class="mx-auto max-w-2xl mt-16 pt-10 pb-48">
           <div class="hidden sm:mb-8 sm:flex sm:justify-center">
             <div
-              class="relative rounded-full px-3 py-1 text-sm leading-6 text-pink-400 ring-1 ring-white/10 hover:ring-white/20"
+              class="relative rounded-full bg-slate-500 px-3 py-1 text-sm leading-6 text-black ring-1 ring-white/10 hover:ring-white/20"
             >
-              Powered by the data at AirMailer.io
+              ⚡ Powered by the data at AirMailer.io
               <a
                 href="https://airmailer.io"
                 target="_blank"
                 class="font-semibold text-white"
-                ><span class="absolute inset-0" aria-hidden="true"></span>Learn
-                More <span aria-hidden="true">&rarr;</span></a
+                ><span class="absolute inset-0 z-10" aria-hidden="true"></span
+                >Learn More <span aria-hidden="true">&rarr;</span></a
               >
             </div>
           </div>
-          <div class="text-center">
+          <div class="text-center p-10 rounded-md">
             <h1
-              class="text-4xl font-bold tracking-tight text-white sm:text-6xl"
+              class="text-4xl font-bold tracking-tight text-gray-50 sm:text-6xl"
             >
-              Renters delivered to you in the form of Audiences.
+              Renters delivered to you in the form of
+              <span class="text-green-400 italic">Audiences</span>
             </h1>
-            <p class="mt-6 text-lg leading-8 text-pink-400 italic text-shadow">
+            <p
+              class="mt-6 text-lg leading-8 text-white bg-slate-600 bg-opacity-50 rounded-md p-4"
+            >
               DataForest is an agency focused on building deep Facebook
               audiences. We do this by leveraging the data from AirMailer.io to
               programmatically build better audiences than what is possible
@@ -189,7 +99,7 @@
             <div class="mt-10 flex items-center justify-center gap-x-6">
               <a
                 href="#"
-                class="rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-400"
+                class="rounded-lg bg-green-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-400"
                 >Get in touch</a
               >
             </div>
